--- a/classwork_a.html
+++ b/classwork_a.html
@@ -6,12 +6,7 @@
     <title>JDS Document Centre</title>
     <link rel="stylesheet" href="styles.css">
 
-
 </head>
-<a href="index.html">Home</a>
-        <a href="about_us.html">About Us</a>
-        <a href="contact_us.html">Contact Us</a>
-
 <body>
     <header>
         <h1>JDS Document Centre</h1>
@@ -19,11 +14,16 @@
             <a href="index.html">Home</a>
             <a href="pricing.html">Pricing</a>
             <a href="reviews.html">Reviews</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     <section class="hero">
         <h2>Your One-Stop Solution for Document Services</h2>
-        <p>We provide professional printing, editing, and document creation.</p>
+        <p>We provide professional printing, editing, and document creation.</p><br>
+        <h3> Cantact Us</h3>
+        <P>We would love to hear from you</P>
+        <p> telephone: 876-553-0120</p>
+        <P> email: jswdocuments@gmail.com</P>
     </section>
     <footer>
         <p>&copy; 2025 JDS Document Centre. All rights reserved.</p>
