--- a/services.html
+++ b/services.html
@@ -20,12 +20,15 @@
     <section class="hero">
         <h2>Your One-Stop Solution for Document Services</h2>
         <p>We provide professional printing, editing, and document creation.</p><br>
-        <h3> Cantact Us</h3>
-        <P>We would love to hear from you</P>
-        <p> telephone: 876-553-0120</p>
-        <P> email: jswdocuments@gmail.com</P>
+        <h3> Our services</h3>
+        <P>Printing: We offer fast and high-quality printing for various types of documents </P> 
+        <P>Editing: Our team of skilled editors ensures that your documents are error-free,<br>
+             polished, and professionally formatted, enhancing clarity and impact. </P> 
+        <p>Document Creation: From business proposals and contracts to resumes and personal letters,<br>
+             we work closely with clients to create customized, professional documents tailored to <br>
+             specific needs and goals</p>
     </section>
-    <footer>
+ <footer>
         <p>&copy; 2025 JDS Document Centre. All rights reserved.</p>
     </footer>
 </body>
