--- a/services.html
+++ b/services.html
@@ -21,12 +21,12 @@
         <h2>Your One-Stop Solution for Document Services</h2>
         <p>We provide professional printing, editing, and document creation.</p><br>
         <h3> Our services</h3>
-        <P>Printing: We offer fast and high-quality printing for various types of documents </P> 
-        <P>Editing: Our team of skilled editors ensures that your documents are error-free,<br>
-             polished, and professionally formatted, enhancing clarity and impact. </P> 
-        <p>Document Creation: From business proposals and contracts to resumes and personal letters,<br>
+        <strong>Printing:</strong> We offer fast and high-quality printing for various types of documents </P> 
+        <strong>Editing:</strong> Our team of skilled editors ensures that your documents are error-free,<br>
+             polished, and professionally formatted, enhancing clarity and impact. <br> <br>
+        <strong>Document Creation:</strong>From business proposals and contracts to resumes and personal letters,<br>
              we work closely with clients to create customized, professional documents tailored to <br>
-             specific needs and goals</p>
+             specific needs and goals
     </section>
  <footer>
         <p>&copy; 2025 JDS Document Centre. All rights reserved.</p>
