--- a/classwork_a.html
+++ b/classwork_a.html
@@ -24,6 +24,9 @@
         <P>We would love to hear from you</P>
         <p> telephone: 876-553-0120</p>
         <P> email: jswdocuments@gmail.com</P>
+        <br><br>
+        <textarea>We Welcome Your Feedback"</textarea>
+        
     </section>
     <footer>
         <p>&copy; 2025 JDS Document Centre. All rights reserved.</p>
