--- a/services.html
+++ b/services.html
@@ -30,6 +30,8 @@
              we work closely with clients to create customized, professional documents tailored to <br>
              specific needs and goals.<br><br>
              <img src="photos/nature.jpg" hight="1500" width="120"/>
+             <br>
+             <textarea>We Welcome Your Feedback"</textarea>
     </section>
  <footer>
         <p>&copy; 2025 JDS Document Centre. All rights reserved.</p>
