--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <a href="index.html">Home</a>
         <a href="about_me.html">About Us</a>
         <a href="contact_us.html">Contact Us</a>
+        <link rel="stylesheet" href="styles.css">
 
 
         <h1>Home Page</h1>
