--- a/assign.html/about_us.html
+++ b/assign.html/about_us.html
@@ -35,6 +35,7 @@
         <a href="about_us.html">About Us</a>
     </nav>
     <main>
+        <img src="imiges/photos/building.jpg" hight="220" width="220"/> <br> <br>
         <h2>Who We Are</h2>
         <p>Browns Construction Company has been delivering exceptional construction services for over a decade. Our team of experts specializes in design, building, and project management.</p>
     </main>
