--- a/individual.html
+++ b/individual.html
@@ -20,7 +20,7 @@
     <main>
         <h2>Building Your Dreams</h2>
         <p>At Brown's Construction Company, we specialize in turning your ideas into reality. From residential to commercial projects, we've got you covered.</p>
-        <p>We are a fast growing construction company in nestled in the hills of St Mary Jamaica. We provide qiality construction services such as new</p>
+        <p>We are a fast growing construction company in nestled in the hills of St Mary Jamaica. We provide quality construction services such as new</p>
         <p> construction and renovation.</p>
     </main>
     <footer>
