--- a/services.html
+++ b/services.html
@@ -22,14 +22,14 @@
         <p>We provide professional printing, editing, and document creation.</p><br>
         <h3> Our services</h3>
         <strong>Printing:</strong> We offer fast and high-quality printing for various types of documents <br><br>
-        <img src="photos/nature.jpg" hight="1500" width="120"/> <br> <br>
+        <img src="photos/building.jpg" hight="1500" width="120"/> <br> <br>
         <strong>Editing:</strong> Our team of skilled editors ensures that your documents are error-free,<br>
              polished, and professionally formatted, enhancing clarity and impact. <br> <br>
-             <img src="photos/nature.jpg" hight="1500" width="120"/> <br> <br>
+             <img src="photos/construction1.jpg" hight="1500" width="120"/> <br> <br>
         <strong>Document Creation:</strong>From business proposals and contracts to resumes and personal letters,<br>
              we work closely with clients to create customized, professional documents tailored to <br>
              specific needs and goals.<br><br>
-             <img src="photos/nature.jpg" hight="1500" width="120"/>
+             <img src="photos/house 1.jpg" hight="1500" width="120"/>
              <br>
              <textarea>We Welcome Your Feedback"</textarea>
     </section>
