--- a/assign.html/about_us.html
+++ b/assign.html/about_us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Browns Construction Company</title>
+    <title>About Us - Brown's Construction Company</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,16 +28,16 @@
 </head>
 <body>
     <header>
-        <h1>About Browns Construction Company</h1>
+        <h1>About Browns' Construction Company</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
         <a href="about_us.html">About Us</a>
     </nav>
     <main>
-        <img src="imiges/photos/building.jpg" hight="620" width="420"/> <br> <br>
-        <h2>Who We Are</h2>
-        <p>Browns Construction Company has been delivering exceptional construction services for over a decade. Our team of experts specializes in design, building, and project management.</p>
+        <img src="photos/construction1.jpg" hight="1500" width="120"/> <br> <br>
+        <h2>Who Are We</h2>
+        <p>Brown's Construction Company has been delivering exceptional construction services for over a decade. Our team of experts specializes in design, building, and project management.</p>
     </main>
 </body>
 </html>
