Adding colour and style to assignment

--- a/services.html
+++ b/services.html
@@ -5,7 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JDS Document Centre</title>
     <link rel="stylesheet" href="styles.css">
-
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f4f4f4;
+        }
+        header {
+            background: hsl(204, 76%, 64%);
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+        nav {
+            margin: 15px 0;
+        }
+        nav a {
+            margin-right: 15px;
+            text-decoration: none;
+            color: #13608d;
+        }
+    </style>
 </head>
 <body>
     <header>
