--- a/classwork_a.html
+++ b/classwork_a.html
@@ -3,33 +3,131 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JDS Document Centre</title>
-    <link rel="stylesheet" href="styles.css">
-
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>JDS Document Centre</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="pricing.html">Pricing</a>
-            <a href="reviews.html">Reviews</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+        <div class="container">
+            <h1>Contact Us</h1>
+        </div>
     </header>
-    <section class="hero">
-        <h2>Your One-Stop Solution for Document Services</h2>
-        <p>We provide professional printing, editing, and document creation.</p><br>
-        <h3> Cantact Us</h3>
-        <P>We would love to hear from you</P>
-        <p> telephone: 876-553-0120</p>
-        <P> email: jswdocuments@gmail.com</P>
-        <br><br>
-        <textarea>We Welcome Your Feedback"</textarea>
-        
+
+    <section class="contact-form">
+        <div class="container">
+            <h2>We'd love to hear from you!</h2>
+            <form action="#" method="POST">
+                <label for="name">Your Name</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Your Email</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Your Message</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+
+                <button type="submit" class="submit-btn">Send Message</button>
+            </form>
+        </div>
     </section>
+
     <footer>
-        <p>&copy; 2025 JDS Document Centre. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2025 Your Company Name</p>
+        </div>
     </footer>
 </body>
 </html>
+CSS (style.css)
+css
+Copy code
+/* General Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    background-color: #f4f4f4;
+}
+
+/* Header */
+header {
+    background-color: #333;
+    color: white;
+    padding: 20px 0;
+}
+
+header .container {
+    text-align: center;
+}
+
+h1 {
+    margin: 0;
+    font-size: 2.5rem;
+}
+
+/* Contact Form Section */
+.contact-form {
+    padding: 40px 20px;
+    background-color: #fff;
+    margin: 20px auto;
+    max-width: 600px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.contact-form h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    color: #333;
+}
+
+.contact-form form {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-form label {
+    margin: 10px 0 5px;
+    color: #555;
+}
+
+.contact-form input,
+.contact-form textarea {
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1rem;
+}
+
+.contact-form button.submit-btn {
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1.1rem;
+}
+
+.contact-form button.submit-btn:hover {
+    background-color: #555;
+}
+
+/* Footer */
+footer {
+    background-color: #333;
+    color: white;
+    padding: 10px 0;
+    text-align: center;
+}
+
+footer p {
+    margin: 0;
+    font-size: 1rem;
+}
