--- a/assign.html/about_us.html
+++ b/assign.html/about_us.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Brown's Construction Company</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -37,7 +38,8 @@
     <main>
         <img src="photos/construction1.jpg" hight="1500" width="120"/> <br> <br>
         <h2>Who Are We</h2>
-        <p>Brown's Construction Company has been delivering exceptional construction services for over a decade. Our team of experts specializes in design, building, and project management.</p>
+        <p>Brown's Construction Company has been delivering exceptional construction services for over a
+             decade. Our team of experts specializes in design, building, and project management.</p>
     </main>
 </body>
 </html>
