--- a/assign.html/index.html
+++ b/assign.html/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Browns Construction Company</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,8 +26,7 @@
             text-decoration: none;
             color: #13608d;
         }
-    </style>
-    
+    </style>    
 </head>
 <body>
     <header>
@@ -41,6 +41,23 @@
         <p>At Brown's Construction Company, we specialize in turning your ideas into reality. From residential to commercial projects, we've got you covered.</p>
         <p>We are a fast growing construction company in nestled in the hills of St Mary Jamaica. We provide qiality construction services such as new
         construction and renovation.</p>
+        <section class="hero">
+            <h2>Your One-Stop Solution for Document Services</h2>
+            <p>We provide professional printing, editing, and document creation.</p><br>
+            <h3> Our services</h3>
+            <strong>Printing:</strong> We offer fast and high-quality printing for various types of documents <br><br>
+            <img src="photos/building.jpg" hight="1500" width="120"/> <br> <br>
+            <strong>Editing:</strong> Our team of skilled editors ensures that your documents are error-free,<br>
+                 polished, and professionally formatted, enhancing clarity and impact. <br> <br>
+                 <img src="photos/construction1.jpg" hight="1500" width="120"/> <br> <br>
+            <strong>Document Creation:</strong>From business proposals and contracts to resumes and personal letters,<br>
+                 we work closely with clients to create customized, professional documents tailored to <br>
+                 specific needs and goals.<br><br>
+                 <img src="photos/house 1.jpg" hight="1500" width="120"/>
+                 <br> <br> ,<br>
+                 <textarea>We Welcome Your Feedback"</textarea>
+        </section>
+    
     </main>
     <footer>
         <p>&copy; 2025 Brown's Construction Company. All rights reserved.</p>
