--- a/assign.html/index.html
+++ b/assign.html/index.html
@@ -45,15 +45,15 @@
             <h2>Your One-Stop Solution for Document Services</h2>
             <p>We provide professional printing, editing, and document creation.</p><br>
             <h3> Our services</h3>
-            <strong>Printing:</strong> We offer fast and high-quality printing for various types of documents <br><br>
-            <img src="photos/building.jpg" hight="1500" width="120"/> <br> <br>
-            <strong>Editing:</strong> Our team of skilled editors ensures that your documents are error-free,<br>
+            <strong>Plan Reading:</strong> We offer fast and high-quality printing for various types of documents <br><br>
+            <img src="photos/building.jpg" hight="700" width="700"/> <br> <br>
+            <strong>New Buildings:</strong> Our team of skilled editors ensures that your documents are error-free,<br>
                  polished, and professionally formatted, enhancing clarity and impact. <br> <br>
-                 <img src="photos/construction1.jpg" hight="1500" width="120"/> <br> <br>
-            <strong>Document Creation:</strong>From business proposals and contracts to resumes and personal letters,<br>
+                 <img src="photos/construction1.jpg" hight="700" width="700"/> <br> <br>
+            <strong>Renovations:</strong>From business proposals and contracts to resumes and personal letters,<br>
                  we work closely with clients to create customized, professional documents tailored to <br>
                  specific needs and goals.<br><br>
-                 <img src="photos/house 1.jpg" hight="1500" width="120"/>
+                 <img src="photos/house 1.jpg" hight="700" width="700"/>
                  <br> <br> ,<br>
                  <textarea>We Welcome Your Feedback"</textarea>
         </section>
