--- a/assign.html/about_us.html
+++ b/assign.html/about_us.html
@@ -5,31 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Brown's Construction Company</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f4f4f4;
-        }
-        header {
-            background: hsl(204, 76%, 64%);
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-        nav {
-            margin: 15px 0;
-        }
-        nav a {
-            margin-right: 15px;
-            text-decoration: none;
-            color: #13608d;
-        }
+   
+   
     </style>
 </head>
 <body>
     <header>
-        <h1>About Browns' Construction Company</h1>
+        <h1>About Brown's Construction Company</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -38,8 +20,8 @@
     <main>
         <img src="photos/construction1.jpg" hight="1500" width="120"/> <br> <br>
         <h2>Who Are We</h2>
-        <p>Brown's Construction Company has been delivering exceptional construction services for over a
-             decade. Our team of experts specializes in design, building, and project management.</p>
+        <p>Brown's Construction Company has been delivering exceptional construction services 
+        for over a decade.<br>Our team of experts specializes in design, building, and project management.<br>
+             we have built a reputation as a team of talented and reliable contractors and designers. </p>
     </main>
-</body>
-</html>
+</body></html>
