--- a/assign.html/index.html
+++ b/assign.html/index.html
@@ -6,27 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Browns Construction Company</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f4f4f4;
-        }
-        header {
-            background: hsl(204, 76%, 64%);
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-        nav {
-            margin: 15px 0;
-        }
-        nav a {
-            margin-right: 15px;
-            text-decoration: none;
-            color: #13608d;
-        }
-    </style>    
+        
 </head>
 <body>
     <header>
@@ -42,16 +22,17 @@
         <p>We are a fast growing construction company in nestled in the hills of St Mary Jamaica. We provide qiality construction services such as new
         construction and renovation.</p>
         <section class="hero">
-            <h2>Your One-Stop Solution for Document Services</h2>
-            <p>We provide professional printing, editing, and document creation.</p><br>
+            <h2> Services is our strenght</h2>
+            <p>We provide quality craftsmanship and comprehensive service in one place for all your building needs.</p><br>
             <h3> Our services</h3>
-            <strong>Plan Reading:</strong> We offer fast and high-quality printing for various types of documents <br><br>
+            <strong>New Buildings:</strong> Ready to build your dream home from scratch Our expert team of contractors can work with  <br><br>
+            you to select the perfect materials, finishes and fixtures for your project.<br> <br>
             <img src="photos/building.jpg" hight="700" width="700"/> <br> <br>
-            <strong>New Buildings:</strong> Our team of skilled editors ensures that your documents are error-free,<br>
+            <strong>Maintanance:</strong> Our clients are included throughout the process to ensure they’re satisfied before, during and after construction<br>
                  polished, and professionally formatted, enhancing clarity and impact. <br> <br>
                  <img src="photos/construction1.jpg" hight="700" width="700"/> <br> <br>
-            <strong>Renovations:</strong>From business proposals and contracts to resumes and personal letters,<br>
-                 we work closely with clients to create customized, professional documents tailored to <br>
+            <strong>Repairs:</strong>Revitalize your home with Brown’s Construction Company From bathroom makeovers to complete whole <br>
+            We handle all conceptual drawings, permits, construction and interior design.  <br>
                  specific needs and goals.<br><br>
                  <img src="photos/house 1.jpg" hight="700" width="700"/>
                  <br> <br> ,<br>
