--- a/freestyle.html
+++ b/freestyle.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Brown's Construction Company</title>
+    <link rel="stylesheet" href="styles.css">
+      <style type="text/css">
+        .img_deg {
+            float:right;
+        }
+      </style>
+   </head>
+<body>
+    <header>p
+      <div id="banner">   
+        <h1>About Brown's Construction Company</h1>
+    </div>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about_us.html">About Us</a>
+        <a href="Contact_us.html">Contact Us</a>
+    </nav>
+    </header>   
+    <br> <br>
+   
+<main>
+        <img class="img_deg" src="photos/construction1.jpg" hight="1500" width="120"/> <br> <br>
+        <h2>Who Are We</h2>
+        <p>Brown's Construction Company has been delivering exceptional construction services 
+        for over a decade.<br>Our team of experts specializes in design, building, and project management.<br>
+             we have built a reputation as a team of talented and reliable contractors and designers. </p>
+</main>
+<div id="footer">
+    
+    <p>&copy; 2025 Brown's Construction Company. All rights reserved.</p>
 
+    <a href="https://www.amazon.com">Amazon</a> 
+    <a href="https://www.ebay.com" target="_blank">ebay</a>
+    
+<div>
+</body>
+</html>
