--- a/freestyle.html
+++ b/freestyle.html
@@ -52,6 +52,31 @@
 
             <img src="photos/house 1.jpg" hight="300" width="300"/>
                  <br> <br> ,<br>
+
+                 <table>
+                    <tr>Telephone No. - 876-851-8391</tr> <br>      
+                    <tr>Email- mbrown's@gmail.com</tr><br>
+                    <tr>Opening Hours</tr><br>
+                    <tr>
+                        <td>Mondays</td>
+                        <td>Tuesday</td>
+                        <td>Wednesday</td>
+                        <td>Thursday</td>
+                        <td>Thursday</td>
+                        <td>Friday</td>
+                    </tr>
+                    <tr>
+                        <td>9am - 5pm</td>
+                        <td>9am - 5pm</td>
+                        <td>9am - 5pm</td>
+                        <td>9am - 5pm</td>
+                        <td>9am - 1pm</td>
+                        <td>9am - 6pm</td>
+
+
+                    </tr>
+                                          
+                </table>
             
         </section>
        </div>
