--- a/assign.html/about_us.html
+++ b/assign.html/about_us.html
@@ -11,7 +11,7 @@
 <body>
     <header>
       <div id="banner">   
-        <h1>About Brown's Construction Company</h1>
+        <h1> Brown's Construction Company</h1>
     </div>
     <nav>
         <a href="index.html">Home</a>
@@ -22,8 +22,9 @@
     <br> <br>
    
 <main>
-        <img src="photos/construction1.jpg" hight="1500" width="120"/> <br> <br>
-        <h2>Who Are We</h2>
+    <h1>Browns Construction Company</h1> <br>
+        <img src="photos/images6.jpg" hight="900" width="900"/> <br> <br>
+        <h3>Who Are We</h3>
         <p>Brown's Construction Company has been delivering exceptional construction services 
         for over a decade.<br>Our team of experts specializes in design, building, and project management.<br>
              we have built a reputation as a team of talented and reliable contractors and designers. </p>
@@ -32,9 +33,9 @@
     
     <p>&copy; 2025 Brown's Construction Company. All rights reserved.</p>
 
-    <a href="https://www.amazon.com">Amazon</a> 
-    <a href="https://www.ebay.com" target="_blank">ebay</a>
-    
+    <a href="https://www.facebook.com">Facebook</a>
+    <a href="https://www.instagram.com">Instagram</a>
+    <P>10 Lane View, Cresent, Port Maria, St Mary</P>
 <div>
 </body>
 </html>
